--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 			<div class="jumbotron jumbotron-fluid">
 				<div class="container">
-					<div class="text-center row">
-						<div class="col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-sm-12" >
-							<img class= "me" src="assets/images/jonathan.jpg">
+					<div class=" text-center row">
+						<div class="col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-sm-12 " >
+							<img class= "me" src="#" width="140" height="140">
 						</div>
 					</div>
 					<h1 class="display-4">Jonathan Fulgencio</h1>
