--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
 
 	<!-- personalized css -->
-	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
 
 	<!-- Javascript -->
 	<!-- JQuery first then popper the bootstrap js -->
@@ -33,112 +33,146 @@
 
 </head>
 <body> 
-	<div class="background">
-		<div class="container">
-			<ul class="nav justify-content-center nav-tabs">
+	<div class="container-fluid px-0">
+		<div class="row featurette main" id="aboutme">
+			<div class="col-md-7 order-md-2 col-sm-12 order-2">
+				<h2 class="featurette-heading animated fadeInRight">JONATHAN FULGENCIO</h2>
+
+				<p class="main-lead animated fadeInRight bubble me text-center">Hi I'm Jonathan Fulgencio I graduated with a Bachelor Degree of Information Technology. I used to worked on a media advertising company for 5 years. I'm a music enthusiast and love playing video games. Im also a car guy who loves to attend car conventions. Im currently learning web development at Tuiit Coding bootcamp and very excited to create interactive websites in the future. </p>
+
+			</div>
+			<div class="text-center col-md-5 order-md-1 col-sm-12 order-1">
+				<div class="mainImage"></div>
+				<a href="https://www.facebook.com/jonathan.v.fulgencio" target="_blank"><i class="fab fa-facebook"></i></a>
+				<a href=""><i class="fab fa-twitter-square"></i></a>
+				<a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.linkedin.com/in/jonathan-fulgencio-29720216b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<h4>Contact me</h4>
+
+				<p>43 Onyx st greenheights village Paranaque city</p>
+				<i class="fas fa-mobile-alt"></i> <small>09063128707</small>
+				<br>
+				<i class="fas fa-envelope"></i><small> fulgenciojonat@gmail.com</small>
+			</div>
+		</div>
+		<div class="links">
+			<ul class="nav justify-content-center">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">About me</a>
+					<a class="nav-link" href="#aboutme">About Me</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Skills</a>
+					<a class="nav-link" href="#">|</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Social Media</a>
+					<a class="nav-link" href="#skills-me">Skills</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Contact Me</a>
+					<a class="nav-link" href="#">|</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#project-me">Project</a>
 				</li>
 			</ul>
-
-
-			<div class="jumbotron jumbotron-fluid">
-				<div class="container">
-					<div class=" text-center row">
-						<div class="col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-sm-12 " >
-							<img class= "me" src="#" width="140" height="140">
-						</div>
-					</div>
-					<h1 class="display-4">Jonathan Fulgencio</h1>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
-				</div>
-			</div>
-
-			<div class="skills-heading">
-				<h2 class="section1">Front-End Skills</h2>
-			</div>
-
-			<div class="card-group">
-				<div class="card">
-					<img class="skills card-img-top" src="./assets/image/HTML.png" alt="Card image cap"></i>
-					<div class="card-body">
-						<h5 class="card-title"><strong>HTML</strong></h5>
-						<p class="card-text">Level:</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
-						</div>
-					</div>
-				</div>
-				<div class="card">
-					<img class="skills card-img-top" src="./assets/image/CSS3.png" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title"><strong>CSS</strong></h5>
-						<p class="card-text">Level:</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
-						</div>
-					</div>
-				</div>
-				<div class="card">
-					<img class="skills card-img-top" src="./assets/image/bootstrap.png" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title"><strong>Bootstrap</strong></h5>
-						<p class="card-text">Level:</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
-						</div>
-
-					</div>
-				</div>
-			
 		</div>
-		<div class="skills-heading">
-				<h2 class="section1">Other Skills</h2>
-			</div>
-		<div class="footer">
-			<div class=" section row">
-				<div class="col-lg-4">
-					<h4>Contact</h4>
-					<hr>
-					<h3>Paranaque City</h3>
-					<i class="fas fa-mobile-alt"></i> <small>0912312123</small>
-					<br>
-					<i class="fas fa-envelope"></i><small> jonathanfulgencio@yahoo.com</small>
-				</div>
-				<div class="col-lg-4">
-					<h4>Social media</h4>
-					<hr>
-					<a href=""><i class="fab fa-facebook"></i></a>
-					<a href=""><i class="fab fa-twitter-square"></i></a>
-					<a href=""><i class="fab fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-4">
-					<h4>Location</h4>
-					<hr>
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.051154237739!2d121.03122521525555!3d14.653037689769096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b6fd779964b5%3A0x5167e834bcc4a1d0!2sAyala+Malls+TriNoma!5e0!3m2!1sen!2sph!4v1537233612755" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+		
+		
+
+
+		<div class="skill-content">
+			<div class="skill-bg">
+
+				<h2 class="section-heading text-center" id="skills-me">Skills</h2>
+
+				<hr class="featurette-divider">
+
+				<div class="row featurette skill-section">
+					<div class="text-center col-md-3">
+						<img class="skills" src="./assets/image/HTML.png" alt="Card image cap" width="100" height="100">
 					</div>
+					<div class="col-md-9 padding-bar">
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+						</div>
+					</div>
+
 				</div>
+				<div class="row featurette skill-section">
+					<div class="text-center col-md-3" >
+						<img class="skills" src="./assets/image/CSS3.png" alt="Card image cap" width="100" height="100">
+					</div>
+					<div class="col-md-9 padding-bar">
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+						</div>
+					</div>							
+				</div>
+				<div class="row featurette skill-section">
+					<div class="text-center col-md-3">
+						<img class="skills" src="./assets/image/bootstrap.png" alt="Card image cap" width="100" height="100">
+					</div>
+					<div class="col-md-9 padding-bar">
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+						</div>
+					</div>							
+				</div>
+				
+
 			</div>
 		</div>
-
 	</div>
+
+	
+	<div class="container-fluid px-0">
+
+		<div class="capstone-content" id="project-me">
+			<div class="bg">
+
+
+				<h2 class="section-heading text-center">Capstone project</h2>
+
+				<hr class="featurette-divider">
+				<div class="row featurette capstone">
+					<div class="col-md-7">
+						<h2 class="featurette-heading animated fadeInLeft">Project 1</h2>
+						<p class="lead animated fadeInLeft">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<div class="animated fadeInLeft text-center col-md-5 px-0">
+							<a href="https://fulgenciojonat.github.io/guitarshred-2/index.html"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac.png" alt="Generic placeholder image" width="500" height="500"></a>
+						</div>
+					</div>
+					<div class="row featurette capstone">
+						<div class="animated fadeInLeft text-center col-md-5">
+							<img class="featurette-image img-fluid mx-auto" src="./assets/image/mac.png" alt="Generic placeholder image" width="500" height="500">
+						</div>
+						<div class="col-md-7">
+							<h2 class="featurette-heading animated fadeInLeft">Project 2</h2>
+							<p class="lead animated fadeInLeft">Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!!</p>
+						</div>
+
+					</div>
+					<div class="row featurette capstone">
+						<div class="col-md-7">
+							<h2 class="featurette-heading animated fadeInLeft">Project 3</h2>
+							<p class="lead animated fadeInLeft">Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!! Coming Soon!!.</p>
+						</div>
+						<div class="animated fadeInLeft text-center col-md-5">
+							<img class="featurette-image img-fluid mx-auto" src="./assets/image/mac.png" alt="Generic placeholder image" width="500" height="500">
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+
+
+
 
 
 </body>
