--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<br>
 				<i class="fas fa-envelope"></i><small> fulgenciojonat@gmail.com</small>
 				<br>
-				<a href="/image/resume.pdf" download="resume">Download Resume</a>
+				<a href="assets/image/resume.pdf" download="resume">Download Resume</a>
 			</div>
 		</div>
 		<div class="links">
