--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						<h2 class="featurette-heading animated fadeInLeft"> Mini Project</h2>
 						<p class="lead animated fadeInLeft text-center">Made an javascript game</p>
 						<div class="animated fadeInLeft text-center">
-							<a href="http://frozen-plains-79037.herokuapp.com/"><img class="featurette-image img-fluid mx-auto" src="./assets/image/guessthesong.png" alt="Generic placeholder image" width="500" height="500"></a>
+							<a href="https://fulgenciojonat.github.io/guessthesong/"><img class="featurette-image img-fluid mx-auto" src="./assets/image/guessthesong.png" alt="Generic placeholder image" width="500" height="500"></a>
 						</div>
 					</div>
 				</div>
