--- a/index.html
+++ b/index.html
@@ -35,29 +35,32 @@
 <body> 
 	<div class="container-fluid px-0">
 		<div class="row featurette main" id="aboutme">
-			<div class="col-md-7 order-md-2 col-sm-12 order-2">
-				<h2 class="featurette-heading animated fadeInRight">JONATHAN FULGENCIO</h2>
+			<div class="main-bg">
 
-				<p class="main-lead animated fadeInRight bubble me text-center">Hi I'm Jonathan Fulgencio I graduated with a Bachelor Degree of Information Technology. I used to worked on a media advertising company for 5 years. I'm a music enthusiast and love playing video games. Im also a car guy who loves to attend car conventions. Im currently learning web development at Tuiit Coding bootcamp and very excited to create interactive websites in the future. </p>
 
+				<div class="text-center col align-self-center">
+					<div class="mainImage"></div>
+					<h2 class="featurette-heading animated fadeInRight">JONATHAN FULGENCIO</h2>
+					<p class="main-lead text-center">Hi I'm Jonathan Fulgencio I graduated with a Bachelor Degree of Information Technology. I used to worked on a media advertising company for 5 years. I'm a music enthusiast and love playing video games. Im also a car guy who loves to attend car conventions. Im currently learning web development at Tuiit Coding bootcamp and very excited to create interactive websites in the future. </p>
+					<a href="https://www.facebook.com/jonathan.v.fulgencio" target="_blank"><i class="fab fa-facebook"></i></a>
+					<a href=""><i class="fab fa-twitter-square"></i></a>
+					<a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+					<a href="https://www.linkedin.com/in/jonathan-fulgencio-29720216b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+					<h4>Contact me</h4>
+
+					<p>43 Onyx st greenheights village Paranaque city</p>
+					<i class="fas fa-mobile-alt"></i> <small>09063128707</small>
+					<br>
+					<i class="fas fa-envelope"></i><small> fulgenciojonat@gmail.com</small>
+					<br>
+					<a href="assets/image/resume.pdf" download="resume">Download Resume</a>
+				</div>
 			</div>
 
-			<div class="text-center col-md-5 order-md-1 col-sm-12 order-1">
-				<div class="mainImage"></div>
-				<a href="https://www.facebook.com/jonathan.v.fulgencio" target="_blank"><i class="fab fa-facebook"></i></a>
-				<a href=""><i class="fab fa-twitter-square"></i></a>
-				<a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-				<a href="https://www.linkedin.com/in/jonathan-fulgencio-29720216b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-				<h4>Contact me</h4>
-
-				<p>43 Onyx st greenheights village Paranaque city</p>
-				<i class="fas fa-mobile-alt"></i> <small>09063128707</small>
-				<br>
-				<i class="fas fa-envelope"></i><small> fulgenciojonat@gmail.com</small>
-				<br>
-				<a href="assets/image/resume.pdf" download="resume">Download Resume</a>
-			</div>
 		</div>
+
+
+
 		<div class="links">
 			<ul class="nav justify-content-center">
 				<li class="nav-item">
@@ -77,6 +80,7 @@
 				</li>
 			</ul>
 		</div>
+
 		
 		
 
@@ -174,30 +178,34 @@
 			<div class="bg">
 
 
-				<h2 class="section-heading text-center">Capstone project</h2>
+				<h2 class="section-heading text-center">Projects</h2>
 
 				<hr class="featurette-divider">
 				<div class="row featurette capstone">
 					<div class="col-lg-4">
 						<h2 class="featurette-heading animated fadeInLeft">Project 1</h2>
+						<h4 class="featurette-heading text-center">Guitar-Shred</h4>
 						<p class="lead animated fadeInLeft">Static Website and made a website for guitar school that helps fellow Music enthusiast</p>
 						<div class="animated fadeInLeft text-center">
-							<a href="https://fulgenciojonat.github.io/guitarshred-2/index.html"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac.png" alt="Generic placeholder image" width="500" height="500"></a>
+							<a href="https://fulgenciojonat.github.io/guitarshred-2/index.html" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac.png" alt="Generic placeholder image" width="500" height="500"></a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<h2 class="featurette-heading animated fadeInLeft">Project 2</h2>
+						<h4 class="featurette-heading text-center">Comic-Buddy</h4>
 						<p class="lead animated fadeInLeft">Made an ecommerce website for Comic enthusiast using PHP and Mysql.</p>
 						<div class="animated fadeInLeft text-center">
-							<a href="https://comicbuddies01.000webhostapp.com/views/home.php"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac2.png" alt="Generic placeholder image" width="500" height="500"></a>
+							<a href="https://comicbuddies01.000webhostapp.com/views/home.php" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac2.png" alt="Generic placeholder image" width="500" height="500"></a>
 						</div>
 					</div>
 
 					<div class="col-lg-4">
 						<h2 class="featurette-heading animated fadeInLeft">Project 3</h2>
+						<h4 class="featurette-heading text-center">Cosmetic Manila</h4>
+						<hr>
 						<p class="lead animated fadeInLeft">Made an ecommerce website for Comic eh</p>
 						<div class="animated fadeInLeft text-center">
-							<a href="http://frozen-plains-79037.herokuapp.com/"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac3.png" alt="Generic placeholder image" width="500" height="500"></a>
+							<a href="http://frozen-plains-79037.herokuapp.com/" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac3.png" alt="Generic placeholder image" width="500" height="500"></a>
 						</div>
 					</div>
 					
@@ -206,9 +214,10 @@
 
 					<div class="col-lg-12">
 						<h2 class="featurette-heading animated fadeInLeft"> Mini Project</h2>
-						<p class="lead animated fadeInLeft text-center">Made an javascript game</p>
+						<h4 class="featurette-heading text-center">Guess the song</h4>
+						<p class="lead animated fadeInLeft text-center">I made a javascript/jquery game and the game focuses on clips of songs. Its a very simple game made purely with array and loops</p>
 						<div class="animated fadeInLeft text-center">
-							<a href="https://fulgenciojonat.github.io/guessthesong/"><img class="featurette-image img-fluid mx-auto" src="./assets/image/guessthesong.png" alt="Generic placeholder image" width="500" height="500"></a>
+							<a href="https://fulgenciojonat.github.io/guessthesong/" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/guessthesong.png" alt="Generic placeholder image" width="500" height="500"></a>
 						</div>
 					</div>
 				</div>
