--- a/index.html
+++ b/index.html
@@ -53,32 +53,32 @@
 					<br>
 					<i class="fas fa-envelope"></i><small> fulgenciojonat@gmail.com</small>
 					<br>
-					<a href="assets/image/resume.pdf" download="resume">Download Resume</a>
+					<a href="assets/image/resume.pdf" download="resume" id="download">Download Resume</a>
+				</div>
+				<div class="links">
+					<ul class="nav justify-content-center">
+						<li class="nav-item">
+							<a class="nav-link" href="#aboutme">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">|</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#skills-me">Skills</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">|</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#project-me">Project</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 
-		</div>
 
 
 
-		<div class="links">
-			<ul class="nav justify-content-center">
-				<li class="nav-item">
-					<a class="nav-link" href="#aboutme">About Me</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">|</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#skills-me">Skills</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">|</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#project-me">Project</a>
-				</li>
-			</ul>
 		</div>
 
 		
