--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							</div>
 							<div class="col-lg-6">
 								<div class="animated fadeInLeft text-center">
-									<a href="https://comicbuddies01.000webhostapp.com/views/home.php" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac2.png" alt="Generic placeholder image" width="500" height="500"></a>
+									<a href="https://comicbuddies.000webhostapp.com/views/home.php" target="_blank"><img class="featurette-image img-fluid mx-auto" src="./assets/image/mac2.png" alt="Generic placeholder image" width="500" height="500"></a>
 								</div>
 							</div>
 						</div>
